[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "log-viewer"
version = "0.1.0"
description = "A GTK log viewer for the systemd journal"
requires-python = ">=3.10"

# Restrict installation to Linux — this package depends on GTK3 and
# the systemd journal, neither of which are available on other platforms
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: GTK",
]

[project.scripts]
log-viewer = "logviewer.main:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# gi.require_version() must be called before any gi.repository imports —
# this is a PyGObject requirement, not a code quality issue
"logviewer/main.py" = ["E402"]
"logviewer/ui/gtk/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
